--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "calculadoraNode",
+  "name": "calculadora",
   "version": "1.0.0",
   "description": "calculadora para o bfd",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "gustavo lopes <ghdsl09@gmail.com>",
